--- a/errdb/etc/errdb/errdb.config
+++ b/errdb/etc/errdb/errdb.config
@@ -3,9 +3,8 @@
  {sasl, 
 	[{sasl_error_logger, {file, "var/log/errdb_sasl.log"}}]},
  {errdb,
-	[{data_dir, "var/rrdb"}, 
+	[{data_dir, "/opt/monit/rrdb"}, 
          {template_dir, "etc/errdb/templates"},
          {rrdtool_cmd, "rrdtool -"},
 	 {httpd, [{port, 8000}]}]}
 ].
-
