--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,8 @@
+amqp/ebin/*.beam
+core/ebin/*.beam
+elog/ebin/*.beam
+errdb/ebin/*.beam
+mochiweb/ebin/*.beam
+sesnmp/ebin/*.beam
+mysql/ebin/*.beam
 esyslog/ebin/*
