--- a/etl1/etc/etl1.config
+++ b/etl1/etc/etl1.config
@@ -8,6 +8,6 @@
                 {vhost, <<"/eponoss">>},
                 {user, <<"eponoss">>},
                 {password, <<"public">>}]},
-        {ems, [[{host, "localhost"}, {port, 13027}, {manu, huawei}, {username, "admin"},{password, "huawei123"}]]}
+        {ems, [[{host, "localhost"}, {port, 13027}, {manu, huawei},{cityid, 1001},{username, "admin"},{password, "huawei123"}]]}
     ]}
 ].
