--- a/etl1/etc/etl1.config
+++ b/etl1/etc/etl1.config
@@ -5,8 +5,8 @@
  {etl1,
     [
         {broker, [{host, "localhost"},
-                {vhost, <<"/eponoss">>},
-                {user, <<"eponoss">>},
+                {vhost, <<"/ponoss">>},
+                {user, <<"ponoss">>},
                 {password, <<"public">>}]},
         {ems, [[{host, "localhost"}, {port, 13027}, {manu, huawei},{cityid, 1001},{username, "admin"},{password, "huawei123"}]]}
     ]}
