--- a/etl1/etc/etl1.config
+++ b/etl1/etc/etl1.config
@@ -8,6 +8,8 @@
                 {vhost, <<"/ponoss">>},
                 {user, <<"ponoss">>},
                 {password, <<"public">>}]},
-        {ems, [[{host, "localhost"}, {port, 13027}, {manu, huawei},{cityid, 1001},{username, "admin"},{password, "huawei123"}]]}
+        {ems, [
+                 [{host, "111.113.42.246"}, {port, 9830}, {manu, zte},{cityid, 1001},{username, "root"},{password, "public"}]
+               ]}
     ]}
 ].
