--- a/etl1/etc/etl1.config
+++ b/etl1/etc/etl1.config
@@ -9,7 +9,7 @@
                 {user, <<"ponoss">>},
                 {password, <<"public">>}]},
         {ems, [
-                 [{host, "111.113.42.246"}, {port, 9830}, {manu, zte},{cityid, 1001},{username, "root"},{password, "public"}]
+                 [{host, "111.113.42.246"}, {port, 9830}, {manu, zte},{cityid, 1001},{username, "root"},{password, "public"}, {max_conn, 20}]
                ]}
     ]}
 ].
